--- a/MovieViewer/Base.lproj/Main.storyboard
+++ b/MovieViewer/Base.lproj/Main.storyboard
@@ -122,7 +122,7 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.79386151090000001" green="0.17859346679999999" blue="0.83520661569999999" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
-                            <searchBar contentMode="redraw" id="Bj6-02-xBV">
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" id="Bj6-02-xBV">
                                 <rect key="frame" x="58" y="63" width="262" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
