--- a/MovieViewer/Base.lproj/Main.storyboard
+++ b/MovieViewer/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="pd5-7e-f0J">
-                                <rect key="frame" x="7" y="87" width="300" height="500"/>
+                                <rect key="frame" x="0.0" y="65" width="300" height="500"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="contentInset" minX="5" minY="0.0" maxX="15" maxY="0.0"/>
@@ -26,15 +26,15 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="15" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MovieCollectionCell" id="Ran-9T-uze" customClass="MovieCollectionCell" customModule="MovieViewer" customModuleProvider="target">
-                                        <rect key="frame" x="45" y="64" width="175" height="274"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="top" reuseIdentifier="MovieCollectionCell" id="Ran-9T-uze" customClass="MovieCollectionCell" customModule="MovieViewer" customModuleProvider="target">
+                                        <rect key="frame" x="45" y="64" width="175" height="275"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="175" height="274"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="175" height="275"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="a5Y-sb-JWs">
-                                                    <rect key="frame" x="8" y="8" width="159" height="201"/>
+                                                    <rect key="frame" x="8" y="8" width="160" height="201"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="y6T-ep-lpA">
@@ -55,6 +55,7 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <size key="customSize" width="175" height="275"/>
                                         <connections>
                                             <outlet property="cellImageView" destination="a5Y-sb-JWs" id="KBq-qq-0kh"/>
                                             <outlet property="titleLabel" destination="y6T-ep-lpA" id="dVd-Fb-9J3"/>
@@ -63,7 +64,7 @@
                                 </cells>
                             </collectionView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="143" sectionHeaderHeight="28" sectionFooterHeight="28" id="qL1-Xa-513">
-                                <rect key="frame" x="0.0" y="107" width="402" height="536"/>
+                                <rect key="frame" x="0.0" y="65" width="402" height="536"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <imageView key="tableFooterView" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="x1l-1x-XRx">
@@ -75,7 +76,7 @@
                                         <rect key="frame" x="0.0" y="28" width="402" height="143"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mLd-dy-UB1" id="bUy-F8-MFJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="369" height="143"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="369" height="142.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lch-Wg-zX1">
@@ -109,7 +110,7 @@
                                 </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" id="fpA-vr-vj9" userLabel="NetworkErrorView">
-                                <rect key="frame" x="0.0" y="107" width="402" height="56"/>
+                                <rect key="frame" x="0.0" y="65" width="402" height="56"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Network Error!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3x6-Qq-1aU">
