--- a/MovieViewer/Base.lproj/Main.storyboard
+++ b/MovieViewer/Base.lproj/Main.storyboard
@@ -155,12 +155,37 @@
                                 <rect key="frame" x="0.0" y="60" width="375" height="600"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
+                                    <view contentMode="scaleToFill" id="dJM-10-00G" userLabel="MovieMoreInfoView">
+                                        <rect key="frame" x="0.0" y="0.0" width="310" height="400"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="XAy-9y-lTM" userLabel="CastImageOne">
+                                                <rect key="frame" x="24" y="172" width="120" height="130"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7.43" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="I6d-l3-xgM">
+                                                <rect key="frame" x="33" y="46" width="33" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20000000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6Zv-UW-2I2">
+                                                <rect key="frame" x="114" y="46" width="83" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="1" green="0.37584108599999999" blue="0.47469106370000003" alpha="1" colorSpace="calibratedRGB"/>
+                                    </view>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="fLD-4T-DE2">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="450"/>
+                                        <rect key="frame" x="0.0" y="400" width="375" height="450"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                     <view alpha="0.84999999999999998" contentMode="scaleToFill" id="IP4-yA-YcG">
-                                        <rect key="frame" x="0.0" y="450" width="375" height="200"/>
+                                        <rect key="frame" x="0.0" y="950" width="375" height="200"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hRt-bU-aSv">
@@ -190,11 +215,14 @@
                     </view>
                     <navigationItem key="navigationItem" id="6dS-Jm-hzr"/>
                     <connections>
+                        <outlet property="castOneImage" destination="XAy-9y-lTM" id="Cjy-t4-16u"/>
                         <outlet property="infoView" destination="IP4-yA-YcG" id="t9B-d8-59T"/>
                         <outlet property="movieScrollView" destination="dWb-pM-ZxP" id="rj5-8Z-O6e"/>
                         <outlet property="poster" destination="fLD-4T-DE2" id="jQa-VE-e7T"/>
+                        <outlet property="revenueLabel" destination="6Zv-UW-2I2" id="3XV-oJ-3dd"/>
                         <outlet property="showOverview" destination="exW-gb-nfr" id="rna-tj-mpK"/>
                         <outlet property="showTitle" destination="hRt-bU-aSv" id="GiA-Ct-RxZ"/>
+                        <outlet property="voteAverageLabel" destination="I6d-l3-xgM" id="VVt-ql-3my"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sgV-Dd-FNa" userLabel="First Responder" sceneMemberID="firstResponder"/>
